# backend/docs/swagger.yaml
@@ -1,21 +1,4 @@
 definitions:
-  models.CreateUserRequest:
-    properties:
-      email:
-        type: string
-      name:
-        type: string
-      password:
-        minLength: 6
-        type: string
-      surname:
-        type: string
-    required:
-    - email
-    - name
-    - password
-    - surname
-    type: object
   models.LoginRequest:
     properties:
       email:
@@ -31,6 +14,23 @@ definitions:
         type: string
     required:
     - refresh_token
+    type: object
+  models.RegistrationRequest:
+    properties:
+      email:
+        type: string
+      name:
+        type: string
+      password:
+        minLength: 6
+        type: string
+      surname:
+        type: string
+    required:
+    - email
+    - name
+    - password
+    - surname
     type: object
   models.TokenResponse:
     properties:
@@ -148,6 +148,46 @@ paths:
       summary: Обновление токенов
       tags:
       - auth
+  /api/v1/auth/registration:
+    post:
+      consumes:
+      - application/json
+      description: Регистрирует нового пользователя в системе
+      parameters:
+      - description: Данные пользователя
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/models.RegistrationRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Пользователь создан
+          schema:
+            $ref: '#/definitions/models.UserResponse'
+        "400":
+          description: Неверный формат данных
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "409":
+          description: Email уже существует
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Ошибка сервера
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Регистрация
+      tags:
+      - auth
   /api/v1/users:
     get:
       consumes:
@@ -181,45 +221,6 @@ paths:
       security:
       - BearerAuth: []
       summary: Получить текущего пользователя
-      tags:
-      - users
-    post:
-      consumes:
-      - application/json
-      description: Регистрирует нового пользователя в системе
-      parameters:
-      - description: Данные пользователя
-        in: body
-        name: request
-        required: true
-        schema:
-          $ref: '#/definitions/models.CreateUserRequest'
-      produces:
-      - application/json
-      responses:
-        "201":
-          description: Пользователь создан
-          schema:
-            $ref: '#/definitions/models.UserResponse'
-        "400":
-          description: Неверный формат данных
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-        "409":
-          description: Email уже существует
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-        "500":
-          description: Ошибка сервера
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-      summary: Создать пользователя
       tags:
       - users
   /api/v1/users/all_users:
